2005-02-05  Per Bothner  <per@bothner.com>

	* makeinfo/xref.c (cm_uref): Ulink urls in Docbook need to be
		html-escaped.  bug-texinfo mail, 05 Feb 2005 00:57:55 -0800.

2005-01-30  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\chapmacro) <Ynothingkeyword>: failed to
	\gdef\thischapter inside the group, resulting in "Chapter 1:"
	appearing in the headline of an @unnumbered.
	help-texinfo bug report from: <tdovera@libero.it>,
	27 Jan 2005 11:45:31 +0100.

2005-01-28  Karl Berry  <karl@gnu.org>

	* util/texi2dvi <verbose>: rename variable to verb, since
		functions and variables apparently cannot have the same
		name on Digital UNIX 4.0E, AIX 3.2.5 (325102), ULTRIX V4.5.
		(and related releases, presumably).
        <pgm>: simplify sed expression to avoid \| operator, which does
	        not work on above platforms (and also be more correct).
	<RUNNING_KSH>: switch to ksh under Ultrix.
	All of this stuff reported by Bernhard Simon <simon@zid.tuwien.ac.at>
	and te.

2005-01-25  Karl Berry  <karl@gnu.org>

	* doc/Makefile (texmf_dvips, texmf_pdftex_misc): new paths to
	match teTeX.  tex-k mail from peb, 25 Jan 2005 15:45:37 +0100.

2005-01-23  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (findprog): split $PATH at $path_sep, not spaces.
	(path_sep): don't let ComSpec fool us under cygwin.
	Report from: Eric Blake <ebb9@byu.net>, 19 Jan 2005 05:36:26 -0700.

	* doc/texinfo.txi (euro): mention the font we use for the Euro
	symbol and where to get it.  help-texinfo report from:
	christoph.sobotka@utanet.at, 19 Jan 2005 21:29:20 +0100.

	* doc/info-stnd.texi (Top): per rms, don't use @insertcopying here.
	* doc/texinfo.txi (Top): Likewise.  Also, remove recommendations
		to use it.	   

2005-01-20  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: Have a consistent function declaration style.
	(verbose, absolute_filenames): New functions.
	Use them.
	Report TEXINPUTS and INDEXSTYLE when verbose.

2005-01-20  Karl Berry  <karl@gnu.org>
